fix: cart container visibility

--- a/style.css
+++ b/style.css
@@ -148,7 +148,11 @@ body {
   transition: .5s;
 }
 
-.cart-body-item .display-item > div{
+#display-item {
+  margin-bottom: 15px;
+}
+
+.cart-body-item #display-item > div{
   color: var(--Dark-grayish-blue);
   padding: 15px 10px;
   display: flex;
@@ -157,7 +161,7 @@ body {
   transition: 1s;
 }
 
-.display-item > div > img {
+#display-item > div > img {
   width: 60px;
   height: 60px;
   border-radius: 15px;
